--- a/deployment/mesh-infra/security/secrets.plain/postgres-users.yaml
+++ b/deployment/mesh-infra/security/secrets.plain/postgres-users.yaml
@@ -12,6 +12,6 @@ metadata:
   namespace: default
 type: Opaque
 stringData:
-  postgres.password: use-a-very-strong-password!
-  quantumleap.password: use-a-very-strong-password!
-  aq.password: use-a-very-strong-password!
+  postgres.password: Inventio2021___!
+  quantumleap.password: Inventio2021___!
+  aq.password: Inventio2021___!
