Added registry login

--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -9,7 +9,7 @@ spec:
   storageClassName: microk8s-hostpath
   resources:
     requests:
-      storage: 0
+      storage: 10Gi
 
 ---
 
@@ -23,7 +23,7 @@ spec:
   storageClassName: microk8s-hostpath
   resources:
     requests:
-      storage: 0
+      storage: 100Mi
 
 ---
 
@@ -37,7 +37,7 @@ spec:
   storageClassName: microk8s-hostpath
   resources:
     requests:
-      storage: 0
+      storage: 100Mi
 
 ---
 
@@ -51,7 +51,7 @@ spec:
   storageClassName: microk8s-hostpath
   resources:
     requests:
-      storage: 0
+      storage: 100Mi
 
 ---
 
@@ -212,6 +212,8 @@ spec:
         resources:
           limits:
             nvidia.com/gpu: 1
+        imagePullSecrets:
+        - name: my-registry-secret
             
       - name: reverseproxy
         image: inventio.azurecr.io/iapp-quickanomaly/reverseproxy-x86:dev
@@ -222,6 +224,8 @@ spec:
         - name: data-volume
           mountPath: /serversdata
           subPath: storage
+        imagePullSecrets:
+        - name: my-registry-secret
 
       - name: db
         image: inventio.azurecr.io/core/db:dev
@@ -230,11 +234,15 @@ spec:
         volumeMounts:
         - name: db-data-volume
           mountPath: /var/lib/postgresql/data
+        imagePullSecrets:
+        - name: my-registry-secret
 
       - name: node-red
         image: inventio.azurecr.io/core/flow:dev
         ports:
         - containerPort: 1880
+        imagePullSecrets:
+        - name: my-registry-secret
 
       - name: localbroker
         image: inventio.azurecr.io/core/brokermosquitto:dev
@@ -244,6 +252,8 @@ spec:
         volumeMounts:
         - name: log-volume
           mountPath: /mosquitto/log
+        imagePullSecrets:
+        - name: my-registry-secret
 
       - name: mainapi
         image: inventio.azurecr.io/core/api:dev
@@ -257,6 +267,8 @@ spec:
           subPath: storage
         # - name: docker-sock
         #   mountPath: /var/run/docker.sock
+        imagePullSecrets:
+        - name: my-registry-secret
 
       - name: dockermonitoring
         image: inventio.azurecr.io/core/dockermonitoring:dev
@@ -267,11 +279,15 @@ spec:
         volumeMounts:
         - name: docker-sock
           mountPath: /var/run/docker.sock
+        imagePullSecrets:
+        - name: my-registry-secret
 
       - name: licence-manager-gui
         image: inventio.azurecr.io/edge-licence-manager/reverseproxy-gui-x86:dev
         ports:
         - containerPort: 80
+        imagePullSecrets:
+        - name: my-registry-secret
 
       - name: licence-manager-api
         image: inventio.azurecr.io/edge-licence-manager/api-x86:dev
@@ -285,5 +301,6 @@ spec:
           mountPath: /data
         # - name: docker-sock
         #   mountPath: /var/run/docker.sock
-
+        imagePullSecrets:
+        - name: my-registry-secret
 
