--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -44,6 +44,20 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: broker-log-volume
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: microk8s-hostpath
+  resources:
+    requests:
+      storage: 100Mi
+
+---
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: licence-volume
 spec:
   accessModes:
@@ -244,7 +258,7 @@ spec:
         - containerPort: 1883
         - containerPort: 8000
         volumeMounts:
-        - name: log-volume
+        - name: broker-log-volume
           mountPath: /mosquitto/log
 
       - name: mainapi
@@ -266,9 +280,9 @@ spec:
         - containerPort: 8000
         - containerPort: 9443
         - containerPort: 9000
-        volumeMounts:
-        - name: docker-sock
-          mountPath: /var/run/docker.sock
+        # volumeMounts:
+        # - name: docker-sock
+        #   mountPath: /var/run/docker.sock
 
       - name: licence-manager-gui
         image: inventio.azurecr.io/edge-licence-manager/reverseproxy-gui-x86:dev
@@ -298,6 +312,9 @@ spec:
       - name: mainapi-log-volume
         persistentVolumeClaim:
           claimName: mainapi-log-volume
+      - name: broker-log-volume
+        persistentVolumeClaim:
+          claimName: broker-log-volume
       - name: licence-volume
         persistentVolumeClaim:
           claimName: licence-volume
