--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -92,7 +92,7 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - port: 35332
+  - port: 80
     targetPort: 80
     nodePort: 35332
     protocol: TCP
@@ -108,7 +108,7 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - port: 35336
+  - port: 5432
     targetPort: 5432
     nodePort: 35336
     protocol: TCP
@@ -124,7 +124,7 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - port: 35335
+  - port: 1880
     targetPort: 1880
     nodePort: 35335
     protocol: TCP
@@ -152,6 +152,22 @@ spec:
     protocol: TCP
   selector:
     app: localbroker
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: licence-manager-api
+spec:
+  type: NodePort
+  ports:
+  - port: 80
+    targetPort: 80
+    nodePort: 35340
+    protocol: TCP
+  selector:
+    app: licence-manager-api
 
 ---
 
