--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -162,8 +162,13 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - port: 80
-    targetPort: 80
+  - name: base
+    port: 5001
+    targetPort: 5001
+    protocol: TCP
+  - name: ws
+    port: 5002
+    targetPort: 5002
     protocol: TCP
   selector:
     app: licence-manager-api
