--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -199,7 +199,7 @@ spec:
   type: NodePort
   ports:
   - port: 80
-    #targetPort: 80
+    targetPort: 5003
     nodePort: 35340
     protocol: TCP
   selector:
