--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -1,4 +1,5 @@
 
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -68,6 +69,22 @@ spec:
       storage: 100Mi
 
 ---
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: portainer
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: microk8s-hostpath
+  resources:
+    requests:
+      storage: 1Gi
+
+
+---
+
 
 apiVersion: v1
 kind: Service
@@ -207,19 +224,65 @@ spec:
 
 ---
 
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: dockermonitoring
+# spec:
+#   type: NodePort
+#   ports:
+#   - port: 9000
+#     targetPort: 9000
+#     nodePort: 35350
+#     protocol: TCP
+#   selector:
+#     app: dockermonitoring
+
+# ---
+
+# Source: portainer/templates/service.yaml
 apiVersion: v1
 kind: Service
 metadata:
-  name: dockermonitoring
+  name: portainer
 spec:
   type: NodePort
   ports:
-  - port: 9000
-    targetPort: 9000
-    nodePort: 35350
-    protocol: TCP
+    - port: 9000
+      targetPort: 9000
+      protocol: TCP
+      name: http
+      nodePort: 30777
+    - port: 9443
+      targetPort: 9443
+      protocol: TCP
+      name: https
+      nodePort: 30779      
+    - port: 30776
+      targetPort: 30776
+      protocol: TCP
+      name: edge
+      nodePort: 30776
   selector:
-    app: dockermonitoring
+    app: portainer
+
+---
+
+kind: ClusterRoleBinding
+metadata:
+  name: portainer
+  labels:
+    app.kubernetes.io/name: portainer
+    app.kubernetes.io/instance: portainer
+    app.kubernetes.io/version: "ce-latest-ee-2.19.4"
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+- kind: ServiceAccount
+  namespace: portainer
+  name: portainer-sa-clusteradmin
 
 ---
 
@@ -316,10 +379,10 @@ spec:
       #   # - name: docker-sock
       #   #   mountPath: /var/run/docker.sock
 
-      - name: licence-manager-gui
-        image: inventio.azurecr.io/edge-licence-manager/reverseproxy-gui-x86:dev
-        ports:
-        - containerPort: 80
+      # - name: licence-manager-gui
+      #   image: inventio.azurecr.io/edge-licence-manager/reverseproxy-gui-x86:dev
+      #   ports:
+      #   - containerPort: 80
 
       - name: licence-manager-api
         image: inventio.azurecr.io/edge-licence-manager/api-x86:dev
@@ -333,6 +396,36 @@ spec:
           mountPath: /data
         # - name: docker-sock
         #   mountPath: /var/run/docker.sock
+
+      - name: portainer
+        image: "portainer/portainer-ce:2.19.4"
+        args:
+        - '--tunnel-port=30776'          
+        volumeMounts:
+          - name: portainer-data-volume
+            mountPath: /data              
+        ports:
+          - name: http
+            containerPort: 9000
+            protocol: TCP
+          - name: https
+            containerPort: 9443
+            protocol: TCP              
+          - name: tcp-edge
+            containerPort: 8000
+            protocol: TCP              
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 9443
+            scheme: HTTPS
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 9443
+            scheme: HTTPS
+        resources:
+          {}
 
       volumes:
       - name: data-volume
@@ -350,3 +443,164 @@ spec:
       - name: licence-volume
         persistentVolumeClaim:
           claimName: licence-volume
+      - name: "portainer-data-volume"
+        persistentVolumeClaim:
+          claimName: portainer
+
+---
+
+
+
+
+# ---
+# # Source: portainer/templates/namespace.yaml
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   name: portainer
+# ---
+# # Source: portainer/templates/serviceaccount.yaml
+# apiVersion: v1
+# kind: ServiceAccount
+# metadata:
+#   name: portainer-sa-clusteradmin
+#   namespace: portainer
+#   labels:
+#     app.kubernetes.io/name: portainer
+#     app.kubernetes.io/instance: portainer
+#     app.kubernetes.io/version: "ce-latest-ee-2.19.4"
+# ---
+# # Source: portainer/templates/pvc.yaml
+# kind: "PersistentVolumeClaim"
+# apiVersion: "v1"
+# metadata:
+#   name: portainer
+#   namespace: portainer  
+#   annotations:
+#     volume.alpha.kubernetes.io/storage-class: "generic"
+#   labels:
+#     io.portainer.kubernetes.application.stack: portainer
+#     app.kubernetes.io/name: portainer
+#     app.kubernetes.io/instance: portainer
+#     app.kubernetes.io/version: "ce-latest-ee-2.19.4"
+# spec:
+#   accessModes:
+#     - "ReadWriteOnce"
+#   resources:
+#     requests:
+#       storage: "10Gi"
+# ---
+# # Source: portainer/templates/rbac.yaml
+# apiVersion: rbac.authorization.k8s.io/v1
+# kind: ClusterRoleBinding
+# metadata:
+#   name: portainer
+#   labels:
+#     app.kubernetes.io/name: portainer
+#     app.kubernetes.io/instance: portainer
+#     app.kubernetes.io/version: "ce-latest-ee-2.19.4"
+# roleRef:
+#   apiGroup: rbac.authorization.k8s.io
+#   kind: ClusterRole
+#   name: cluster-admin
+# subjects:
+# - kind: ServiceAccount
+#   namespace: portainer
+#   name: portainer-sa-clusteradmin
+# ---
+# # Source: portainer/templates/service.yaml
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: portainer
+#   namespace: portainer
+#   labels:
+#     io.portainer.kubernetes.application.stack: portainer
+#     app.kubernetes.io/name: portainer
+#     app.kubernetes.io/instance: portainer
+#     app.kubernetes.io/version: "ce-latest-ee-2.19.4"
+# spec:
+#   type: NodePort
+#   ports:
+#     - port: 9000
+#       targetPort: 9000
+#       protocol: TCP
+#       name: http
+#       nodePort: 30777
+#     - port: 9443
+#       targetPort: 9443
+#       protocol: TCP
+#       name: https
+#       nodePort: 30779      
+#     - port: 30776
+#       targetPort: 30776
+#       protocol: TCP
+#       name: edge
+#       nodePort: 30776
+#   selector:
+#     app.kubernetes.io/name: portainer
+#     app.kubernetes.io/instance: portainer
+# ---
+# # Source: portainer/templates/deployment.yaml
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: portainer
+#   namespace: portainer
+#   labels:
+#     io.portainer.kubernetes.application.stack: portainer
+#     app.kubernetes.io/name: portainer
+#     app.kubernetes.io/instance: portainer
+#     app.kubernetes.io/version: "ce-latest-ee-2.19.4"
+# spec:
+#   replicas: 1
+#   strategy:
+#     type: "Recreate"
+#   selector:
+#     matchLabels:
+#       app.kubernetes.io/name: portainer
+#       app.kubernetes.io/instance: portainer
+#   template:
+#     metadata:
+#       labels:
+#         app.kubernetes.io/name: portainer
+#         app.kubernetes.io/instance: portainer
+#     spec:
+#       nodeSelector:
+#         {}
+#       serviceAccountName: portainer-sa-clusteradmin
+#       volumes:
+#         - name: "data"
+#           persistentVolumeClaim:
+#             claimName: portainer
+#       containers:
+#         - name: portainer
+#           image: "portainer/portainer-ce:2.19.4"
+#           imagePullPolicy: Always
+#           args:
+#           - '--tunnel-port=30776'          
+#           volumeMounts:
+#             - name: data
+#               mountPath: /data              
+#           ports:
+#             - name: http
+#               containerPort: 9000
+#               protocol: TCP
+#             - name: https
+#               containerPort: 9443
+#               protocol: TCP              
+#             - name: tcp-edge
+#               containerPort: 8000
+#               protocol: TCP              
+#           livenessProbe:
+#             httpGet:
+#               path: /
+#               port: 9443
+#               scheme: HTTPS
+#           readinessProbe:
+#             httpGet:
+#               path: /
+#               port: 9443
+#               scheme: HTTPS
+#           resources:
+#             {}
