--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -268,23 +268,23 @@ spec:
 
 ---
 
-kind: ClusterRoleBinding
-metadata:
-  name: portainer
-  labels:
-    app.kubernetes.io/name: portainer
-    app.kubernetes.io/instance: portainer
-    app.kubernetes.io/version: "ce-latest-ee-2.19.4"
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: cluster-admin
-subjects:
-- kind: ServiceAccount
-  namespace: portainer
-  name: portainer-sa-clusteradmin
+# kind: ClusterRoleBinding
+# metadata:
+#   name: portainer
+#   labels:
+#     app.kubernetes.io/name: portainer
+#     app.kubernetes.io/instance: portainer
+#     app.kubernetes.io/version: "ce-latest-ee-2.19.4"
+# roleRef:
+#   apiGroup: rbac.authorization.k8s.io
+#   kind: ClusterRole
+#   name: cluster-admin
+# subjects:
+# - kind: ServiceAccount
+#   namespace: portainer
+#   name: portainer-sa-clusteradmin
 
----
+# ---
 
 apiVersion: apps/v1
 kind: Deployment
