--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -224,51 +224,62 @@ spec:
   selector:
     app: licence-manager-gui
 
-# ---
-
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: dockermonitoring
-# spec:
-#   type: NodePort
-#   ports:
-#   - port: 9000
-#     targetPort: 9000
-#     nodePort: 35350
-#     protocol: TCP
-#   selector:
-#     app: dockermonitoring
-
 ---
 
-# Source: portainer/templates/service.yaml
 apiVersion: v1
 kind: Service
 metadata:
-  name: portainer
+  name: dockermonitoring
 spec:
   type: NodePort
   ports:
-    - port: 9000
-      targetPort: 9000
-      protocol: TCP
-      name: http
-      nodePort: 30777
-    - port: 9443
-      targetPort: 9443
-      protocol: TCP
-      name: https
-      nodePort: 30779      
-    - port: 30776
-      targetPort: 30776
-      protocol: TCP
-      name: edge
-      nodePort: 30776
+  - port: 8000
+    targetPort: 8000
+    protocol: TCP
+    name: http1
+  - port: 9443
+    targetPort: 9443
+    protocol: TCP
+    name: http2
+  - port: 9000
+    targetPort: 9000
+    nodePort: 35350
+    protocol: TCP
+    name: http3
   selector:
-    app: portainer
+    app: dockermonitoring
 
 ---
+
+
+
+# # Source: portainer/templates/service.yaml
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: portainer
+# spec:
+#   type: NodePort
+#   ports:
+#     - port: 9000
+#       targetPort: 9000
+#       protocol: TCP
+#       name: http
+#       nodePort: 30777
+#     - port: 9443
+#       targetPort: 9443
+#       protocol: TCP
+#       name: https
+#       nodePort: 30779      
+#     - port: 30776
+#       targetPort: 30776
+#       protocol: TCP
+#       name: edge
+#       nodePort: 30776
+#   selector:
+#     app: portainer
+
+# ---
 
 # kind: ClusterRoleBinding
 # metadata:
@@ -373,15 +384,18 @@ spec:
         # - name: docker-sock
         #   mountPath: /var/run/docker.sock
 
-      # - name: dockermonitoring
-      #   image: inventio.azurecr.io/core/dockermonitoring:dev
-      #   ports:
-      #   - containerPort: 8000
-      #   - containerPort: 9443
-      #   - containerPort: 9000
-      #   # volumeMounts:
-      #   # - name: docker-sock
-      #   #   mountPath: /var/run/docker.sock
+      - name: dockermonitoring
+        image: inventio.azurecr.io/core/dockermonitoring:dev
+        ports:
+        - containerPort: 8000
+          name: http1
+        - containerPort: 9443
+          name: http2
+        - containerPort: 9000
+          name: http3
+        # volumeMounts:
+        # - name: docker-sock
+        #   mountPath: /var/run/docker.sock
 
       - name: licence-manager-gui
         image: inventio.azurecr.io/edge-licence-manager/reverseproxy-gui-x86:dev
@@ -402,35 +416,35 @@ spec:
         # - name: docker-sock
         #   mountPath: /var/run/docker.sock
 
-      - name: portainer
-        image: "inventio.azurecr.io/core/dockermonitoring:dev"
-        args:
-        - '--tunnel-port=30776'          
-        volumeMounts:
-          - name: portainer-data-volume
-            mountPath: /data              
-        ports:
-          - name: http
-            containerPort: 9000
-            protocol: TCP
-          - name: https
-            containerPort: 9443
-            protocol: TCP              
-          - name: tcp-edge
-            containerPort: 8000
-            protocol: TCP              
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 9443
-            scheme: HTTPS
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 9443
-            scheme: HTTPS
-        resources:
-          {}
+      # - name: portainer
+      #   image: "inventio.azurecr.io/core/dockermonitoring:dev"
+      #   args:
+      #   - '--tunnel-port=30776'          
+      #   volumeMounts:
+      #     - name: portainer-data-volume
+      #       mountPath: /data              
+      #   ports:
+      #     - name: http
+      #       containerPort: 9000
+      #       protocol: TCP
+      #     - name: https
+      #       containerPort: 9443
+      #       protocol: TCP              
+      #     - name: tcp-edge
+      #       containerPort: 8000
+      #       protocol: TCP              
+      #   livenessProbe:
+      #     httpGet:
+      #       path: /
+      #       port: 9443
+      #       scheme: HTTPS
+      #   readinessProbe:
+      #     httpGet:
+      #       path: /
+      #       port: 9443
+      #       scheme: HTTPS
+      #   resources:
+      #     {}
 
       volumes:
       - name: data-volume
