--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -389,8 +389,8 @@ spec:
       - name: dockermonitoring
         image: inventio.azurecr.io/core/dockermonitoring:dev
         ports:
-        - containerPort: 8000
-          name: http1
+        # - containerPort: 8000
+        #   name: http1
         - containerPort: 9443
           name: http2
         - containerPort: 9000
