--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -89,6 +89,8 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    app: inmind
   name: quick-anomaly
 spec:
   type: NodePort
@@ -98,13 +100,15 @@ spec:
     nodePort: 35342
     protocol: TCP
   selector:
-    app: quick-anomaly
+    app: inmind
 
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    app: inmind
   name: reverseproxy
 spec:
   type: NodePort
@@ -115,13 +119,15 @@ spec:
     protocol: TCP
     name: http
   selector:
-    app: reverseproxy
+    app: inmind
 
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    app: inmind
   name: db
 spec:
   type: NodePort
@@ -132,13 +138,15 @@ spec:
     protocol: TCP
     name: http
   selector:
-    app: db
+    app: inmind
 
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    app: inmind
   name: node-red
 spec:
   type: NodePort
@@ -148,13 +156,15 @@ spec:
     nodePort: 35335
     protocol: TCP
   selector:
-    app: node-red
+    app: inmind
 
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    app: inmind
   name: localbroker
 spec:
   type: NodePort
@@ -170,13 +180,15 @@ spec:
     nodePort: 35334
     protocol: TCP
   selector:
-    app: localbroker
+    app: inmind
 
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    app: inmind
   name: mainapi
 spec:
   type: NodePort
@@ -185,13 +197,15 @@ spec:
     targetPort: 5001
     protocol: TCP
   selector:
-    app: mainapi
+    app: inmind
 
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    app: inmind
   name: licence-manager-api
 spec:
   type: NodePort
@@ -205,7 +219,7 @@ spec:
     targetPort: 5002
     protocol: TCP
   selector:
-    app: licence-manager-api
+    app: inmind
 
 ---
 
@@ -213,22 +227,27 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    app: inmind
   name: licence-manager-gui
 spec:
   type: NodePort
   ports:
   - port: 80
+    targetPort: 8005
     nodePort: 35340
     protocol: TCP
     name: http
   selector:
-    app: licence-manager-gui
+    app: inmind
 
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    app: inmind
   name: dockermonitoring
 spec:
   type: NodePort
@@ -247,7 +266,7 @@ spec:
     protocol: TCP
     name: http3
   selector:
-    app: dockermonitoring
+    app: inmind
 
 ---
 
