--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -210,13 +210,15 @@ metadata:
 spec:
   type: NodePort
   ports:
-  - name: base
-    port: 5001
-    targetPort: 5001
-    protocol: TCP
-  - name: ws
+  - name: httplicenceapi
     port: 5002
     targetPort: 5002
+    nodePort: 35341
+    protocol: TCP
+  - name: wslicenceapi
+    port: 5003
+    targetPort: 5003
+    nodePort: 35342
     protocol: TCP
   selector:
     app: inmind
@@ -427,7 +429,9 @@ spec:
         image: inventio.azurecr.io/edge-licence-manager/api-x86:dev
         ports:
         - containerPort: 5002
+          name: httplicenceapi
         - containerPort: 5003
+          name: wslicenceapi
         volumeMounts:
         - name: licence-volume
           mountPath: /licence
