force pull main api

--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -394,6 +394,7 @@ spec:
           mountPath: /mosquitto/log
 
       - name: mainapi
+        imagePullPolicy: Always
         image: inventio.azurecr.io/core/api:dev
         ports:
         - containerPort: 5001
