--- a/deployment/mesh-infra/argocd/projects/plat-app-services/inmindlicenceapi/app.yaml
+++ b/deployment/mesh-infra/argocd/projects/plat-app-services/inmindlicenceapi/app.yaml
@@ -1,6 +1,6 @@
 - op: replace
   path: /metadata/name
-  value: inmind
+  value: inmindlicenceapi
 - op: replace
   path: /spec/source/path
   value: deployment/plat-app-services/inmindlicenceapi
