--- a/deployment/plat-app-services/inmindlicenceapi/base.yaml
+++ b/deployment/plat-app-services/inmindlicenceapi/base.yaml
@@ -1,17 +1,17 @@
 
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: data-volume
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: microk8s-hostpath
-  resources:
-    requests:
-      storage: 10Gi
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: data-volume
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   storageClassName: microk8s-hostpath
+#   resources:
+#     requests:
+#       storage: 10Gi
 
----
+# ---
 
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -81,13 +81,13 @@ spec:
         volumeMounts:
         - name: licence-volume
           mountPath: /licence
-        - name: data-volume
-          mountPath: /data
+        # - name: data-volume
+        #   mountPath: /data
 
       volumes:
-      - name: data-volume
-        persistentVolumeClaim:
-          claimName: data-volume
+      # - name: data-volume
+      #   persistentVolumeClaim:
+      #     claimName: data-volume
       - name: licence-volume
         persistentVolumeClaim:
           claimName: licence-volume
