--- a/deployment/plat-app-services/inmind/base.yaml
+++ b/deployment/plat-app-services/inmind/base.yaml
@@ -1,65 +1,37 @@
 
 
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: data-volume
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: microk8s-hostpath
-  resources:
-    requests:
-      storage: 10Gi
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: data-volume
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   storageClassName: microk8s-hostpath
+#   resources:
+#     requests:
+#       storage: 10Gi
 
----
-
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: db-data-volume
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: microk8s-hostpath
-  resources:
-    requests:
-      storage: 1Gi
-
----
-
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mainapi-log-volume
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: microk8s-hostpath
-  resources:
-    requests:
-      storage: 100Mi
-
----
-
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: broker-log-volume
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: microk8s-hostpath
-  resources:
-    requests:
-      storage: 100Mi
-
----
+# ---
 
 # apiVersion: v1
 # kind: PersistentVolumeClaim
 # metadata:
-#   name: licence-volume
+#   name: db-data-volume
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   storageClassName: microk8s-hostpath
+#   resources:
+#     requests:
+#       storage: 1Gi
+
+# ---
+
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: mainapi-log-volume
 # spec:
 #   accessModes:
 #     - ReadWriteOnce
@@ -70,20 +42,48 @@ spec:
 
 # ---
 
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: portainer-volume
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: microk8s-hostpath
-  resources:
-    requests:
-      storage: 1Gi
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: broker-log-volume
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   storageClassName: microk8s-hostpath
+#   resources:
+#     requests:
+#       storage: 100Mi
+
+# ---
+
+# # apiVersion: v1
+# # kind: PersistentVolumeClaim
+# # metadata:
+# #   name: licence-volume
+# # spec:
+# #   accessModes:
+# #     - ReadWriteOnce
+# #   storageClassName: microk8s-hostpath
+# #   resources:
+# #     requests:
+# #       storage: 100Mi
+
+# # ---
+
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: portainer-volume
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   storageClassName: microk8s-hostpath
+#   resources:
+#     requests:
+#       storage: 1Gi
 
 
----
+# ---
 
 
 apiVersion: v1
