--- a/deployment/plat-app-services/inmindlicenceapi/base.yaml
+++ b/deployment/plat-app-services/inmindlicenceapi/base.yaml
@@ -13,19 +13,19 @@
 
 # ---
 
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: licence-volume
-spec:
-  accessModes:
-    - ReadWriteOnce
-  storageClassName: microk8s-hostpath
-  resources:
-    requests:
-      storage: 100Mi
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: licence-volume
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   storageClassName: microk8s-hostpath
+#   resources:
+#     requests:
+#       storage: 100Mi
 
----
+# ---
 
 
 apiVersion: v1
