--- a/deployment/plat-app-services/inmindlicencegui/base.yaml
+++ b/deployment/plat-app-services/inmindlicencegui/base.yaml
@@ -1,9 +1,8 @@
-
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: inmind
+    app: licence-manager-gui
   name: licence-manager-gui
 spec:
   type: NodePort
@@ -14,7 +13,7 @@ spec:
     #protocol: TCP
     name: httplicence
   selector:
-    app: inmind
+    app: licence-manager-gui
 
 ---
 
@@ -24,17 +23,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: inmind
-  name: inmind
+    app: licence-manager-gui
+  name: licence-manager-gui
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: inmind
+      app: licence-manager-gui
   template:
     metadata:
       labels:
-        app: inmind
+        app: licence-manager-gui
     spec:
       imagePullSecrets:
         - name: my-registry-secret
