--- a/deployment/plat-app-services/inmindlicenceapi/base.yaml
+++ b/deployment/plat-app-services/inmindlicenceapi/base.yaml
@@ -72,6 +72,7 @@ spec:
         - name: my-registry-secret
       containers:
       - name: licence-manager-api
+        imagePullPolicy: IfNotPresent
         image: inventio.azurecr.io/edge-licence-manager/api-x86:dev
         ports:
         - containerPort: 5002
