--- a/deployment/plat-app-services/inmindlicenceapi/base.yaml
+++ b/deployment/plat-app-services/inmindlicenceapi/base.yaml
@@ -39,12 +39,12 @@ spec:
   ports:
   - name: httplicenceapi
     port: 5002
-    #targetPort: 5002
+    targetPort: 5002
     nodePort: 35351
     #protocol: TCP
   - name: wslicenceapi
     port: 5003
-    #targetPort: 5003
+    targetPort: 5003
     nodePort: 35352
     #protocol: TCP
   selector:
