--- a/deployment/plat-app-services/inmindlicenceapi/base.yaml
+++ b/deployment/plat-app-services/inmindlicenceapi/base.yaml
@@ -32,7 +32,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: inmind
+    app: licence-manager-api
   name: licence-manager-api
 spec:
   type: NodePort
